Bug 272841 - knetworkmanager from git: plasma crash when clicking on the VPN interface
Summary: knetworkmanager from git: plasma crash when clicking on the VPN interface
Status: RESOLVED FIXED
Alias: None
Product: knetworkmanager
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-09 11:49 UTC by Christian (Fuchs)
Modified: 2011-05-26 23:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian (Fuchs) 2011-05-09 11:49:59 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

In recent git (from today), the knetworkmanager plasmoid crashes plasma when clicking on a VPNC Interface in the left hand part  (interfaces) 

Reproducible: Always

Steps to Reproduce:
1) Create a vpnc interface
2) Open the plasmoid by clicking on it 
3) Click on the interface

Actual Results:  
Plasma crashes. I get a 
QPixmap::scaled: Pixmap is a null pixmap
in .xsession-errors, don't know whether this happens because of it. 

Expected Results:  
Interface details are shown, similar to clicks on the wlan or cable interface
Comment 1 Lamarque V. Souza 2011-05-10 00:40:50 UTC
Git commit 9d079999862df7b0fc4412d87035558bcbd4da5a by Lamarque V. Souza.
Committed on 10/05/2011 at 00:38.
Pushed by lvsouza into branch 'master'.

Prevents crash probably caused by the changes in
869945fbbf8a5fca40aaa1cdb9059acd6919acc5.

BUG: 272841

M  +0    -1    applet/interfacedetailswidget.cpp     

http://commits.kde.org/networkmanagement/9d079999862df7b0fc4412d87035558bcbd4da5a
Comment 2 Lamarque V. Souza 2011-05-10 00:40:50 UTC
Git commit 890460fb15c77756a4b6c68d73ba6504470dbd49 by Lamarque V. Souza.
Committed on 10/05/2011 at 00:38.
Pushed by lvsouza into branch 'nm09'.

Prevents crash probably caused by the changes in
869945fbbf8a5fca40aaa1cdb9059acd6919acc5.

BUG: 272841
(cherry picked from commit 9d079999862df7b0fc4412d87035558bcbd4da5a)

M  +0    -1    applet/interfacedetailswidget.cpp     

http://commits.kde.org/networkmanagement/890460fb15c77756a4b6c68d73ba6504470dbd49
Comment 3 Christian (Fuchs) 2011-05-10 15:03:03 UTC
Fix confirmed, thanks a lot for the fast and good work. 

Kind regards, 

Christian
Comment 4 Will Stephenson 2011-05-26 23:50:46 UTC
Git commit 26ceaf1826e6fe3d1a700208d392f1f220423565 by Will Stephenson, on behalf of Lamarque V. Souza.
Committed on 10/05/2011 at 00:38.
Pushed by wstephens into branch 'libnm-qt'.

Prevents crash probably caused by the changes in
869945fbbf8a5fca40aaa1cdb9059acd6919acc5.

BUG: 272841
(cherry picked from commit 9d079999862df7b0fc4412d87035558bcbd4da5a)
(cherry picked from commit 890460fb15c77756a4b6c68d73ba6504470dbd49)

M  +0    -1    applet/interfacedetailswidget.cpp     

http://commits.kde.org/networkmanagement/26ceaf1826e6fe3d1a700208d392f1f220423565