Prevents crash probably caused by the changes in 869945fbbf8a5fca40aaa1cdb9059acd6919acc5.

BUG: 272841
(cherry picked from commit 9d079999862df7b0fc4412d87035558bcbd4da5a)
(cherry picked from commit 890460fb15c77756a4b6c68d73ba6504470dbd49)